package com.example.javauml;

import java.io.Serializable;

public class CgObj implements Serializable {
    public static final long serialVersionUID = 1L;
    
    public String toHTML() {
        return "";
    }
}
